examples/misc/error/manual/eval_heap.bfr
let fix f =
  let g x = f (fun y -> x x y) in
  g g

let _ =
  fix
    (fun f l -> f (0 :: l))
    ()

let main = []